objects/vlocity_cmt__VlocityTrackingEntry__c.object
<CustomObject>
    <fields>
        <fullName>ElementLabel__c</fullName>
        <label>ElementLabel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ElementName__c</fullName>
        <label>ElementName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ElementStepNumber__c</fullName>
        <label>ElementStepNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ElementType__c</fullName>
        <label>ElementType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OmniScriptId__c</fullName>
        <label>OmniScriptId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContextId__c</fullName>
        <label>Context Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CustomerInteractionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity Interaction</label>
        <referenceTo>vlocity_cmt__CustomerInteraction__c</referenceTo>
        <relationshipLabel>Vlocity Tracking Entries</relationshipLabel>
        <relationshipName>VlocityTrackingEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CustomerInteractionToken__c</fullName>
        <label>Customer Interaction Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ResourceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity Acuity Resource</label>
        <referenceTo>vlocity_cmt__VqResource__c</referenceTo>
        <relationshipLabel>Vlocity Tracking Entries</relationshipLabel>
        <relationshipName>Vlocity_Tracking_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TrackingService__c</fullName>
        <label>TrackingService</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VlocityInteractionToken__c</fullName>
        <label>Vlocity Interaction Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Tracking Entry</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__TrackingService__c</columns>
        <columns>vlocity_cmt__CustomerInteractionId__c</columns>
        <columns>vlocity_cmt__VlocityInteractionToken__c</columns>
        <columns>vlocity_cmt__CustomerInteractionToken__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vlocity Tracking Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Tracking Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>